completed html and js

--- a/style.css
+++ b/style.css
@@ -45,3 +45,8 @@ header{
 .animator{
     padding-bottom:10px;
 }
+.othergoals{
+    background-color: darkslateblue;
+    padding:20px;
+    color: white;
+}
